[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/guild_bar/auth_dialog.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.184, 0.192, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
content_margin_left = 24.0
content_margin_top = 20.0
content_margin_right = 24.0
content_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="submit_btn_normal"]
bg_color = Color(0.345, 0.396, 0.949, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="submit_btn_hover"]
bg_color = Color(0.443, 0.487, 0.957, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[node name="AuthDialog" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)
mouse_filter = 0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)
theme_override_styles/panel = SubResource("panel_style")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Authenticate"
theme_override_font_sizes/font_size = 20

[node name="ModeToggle" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SignInBtn" type="Button" parent="CenterContainer/Panel/VBox/ModeToggle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sign In"

[node name="RegisterBtn" type="Button" parent="CenterContainer/Panel/VBox/ModeToggle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Register"

[node name="UsernameLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "USERNAME"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11

[node name="UsernameInput" type="LineEdit" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
placeholder_text = "Enter your username"

[node name="PasswordLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "PASSWORD"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11

[node name="PasswordRow" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="PasswordInput" type="LineEdit" parent="CenterContainer/Panel/VBox/PasswordRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 36)
placeholder_text = "Enter your password"
secret = true

[node name="GenerateBtn" type="Button" parent="CenterContainer/Panel/VBox/PasswordRow"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "Generate"

[node name="ViewBtn" type="Button" parent="CenterContainer/Panel/VBox/PasswordRow"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "View"

[node name="PasswordHint" type="Label" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
text = "Minimum 8 characters"
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)
theme_override_font_sizes/font_size = 11

[node name="DisplayNameLabel" type="Label" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
text = "DISPLAY NAME (optional)"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11

[node name="DisplayNameInput" type="LineEdit" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
placeholder_text = "How others will see you"

[node name="SubmitButton" type="Button" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "Sign In"
theme_override_styles/normal = SubResource("submit_btn_normal")
theme_override_styles/hover = SubResource("submit_btn_hover")

[node name="ErrorLabel" type="Label" parent="CenterContainer/Panel/VBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.3, 0.3, 1)
autowrap_mode = 2
